# statement_to_experience

./: README.md
AdminGUI/: README.md  robotArmProtocol.txt
AdminGUI/GUI/: GUI.pde  Network.pde  UI.pde
Checkers_Detection/: Checkers_Detection.pde  Draggable.pde
Checkers_GUI/: Button.pde  Checkers_GUI.pde  Data.pde  Highlight.pde  Network.pde  Network1507415404424170729.autosave  README.md  Render.pde
InverseKinematics/: InverseKinematics.pde  Segment.pde
RobotArm/: README.md  RobotArm.ino
ServoTesting/: ServoTesting.ino
ServoTesting/LinearServoTest/: LinearServoTest.ino
cv/: .gitignore  Camera.py  board_Recognition.py  calibrate.py  calibrate_hardcoded.py  grab_screens.py  grab_single_pos.py  main.py  piece_recognition.py  position_board.py  pyproject.toml  settings.py  show_camera.py
cv/cv/: __init__.py  calibration.py  checkerboard.py  chess-id.py  corners.py  test.py  test2.py
cv/cvchess/: board_Recognition.py  main.py
cv/data/: keras_model.h5  keras_model.h5.tape  labels.txt
server/: .gitignore  README.md  package-lock.json  package.json
server/src/: app.controller.ts  app.module.ts  config.controller.ts  main.ts  settings.ts  storage.service.ts
server/src/ai/: ai.service.ts  board-evaluation.service.ts  minimax.service.ts
server/src/board/: board-state.controller.ts  board.controller.ts  board.service.ts  move-validation.service.ts  zobrist-hashing.service.ts
server/src/chat/: chat.service.ts
webapp/: package.json
webapp/public/: index.html  manifest.json
webapp/src/: App.css  App.tsx  Chart.css  Chart.tsx  utils.tsx
(+14 files in other folders)
